car & garage component added

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 
 <body>
     <app-root-default-component></app-root-default-component>
+    <app-car></app-car>
+    <app-garage></app-garage>
 </body>
 
 </html>
